--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,10 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# GIT stuff
+.gitignore
+.gitattributes
+
 reportlab
 svglib
 lxml
