Split tools and crt_tools
The file was getting a little unwieldy. Lot of functions that are mostly split up for ease of groking. Some cleanup in the config. Tools fix. Also need to reupload my PSD files.

--- a/preshtildeath/config.ini
+++ b/preshtildeath/config.ini
@@ -1,7 +1,9 @@
 [GENERAL]
-Side.Pinlines = True
-Hollow.Mana = False
 Move.Art = True
+
+[FULLART]
+Side.Pinlines = True
+Hollow.Mana = True
 
 [PIXEL]
 CRT.Filter = True
