PW support and fixed the SVG2PDF
Should now work for anyone who installs, I hope.

--- a/preshtildeath/config.ini
+++ b/preshtildeath/config.ini
@@ -2,10 +2,10 @@
 Move.Art = True
 
 [FULLART]
-Side.Pinlines = True
+Side.Pinlines = False
 Hollow.Mana = True
 
 [PIXEL]
 CRT.Filter = True
-Invert.Mana = True
-Symbol.BG = False
+Invert.Mana = False
+Symbol.BG = True
