--- a/preshtildeath/config.ini
+++ b/preshtildeath/config.ini
@@ -2,8 +2,8 @@
 Move.Art = True
 
 [FULLART]
-Side.Pinlines = False
-Hollow.Mana = True
+Side.Pinlines = True
+Hollow.Mana = False
 
 [PIXEL]
 CRT.Filter = True
