Big overhaul in progress
Implemented improved textbox resizing for creatures, still need to account better for french vanilla creatures with just one ability, don't exactly like how the come out just yet.

Just wanted to save this because it's working pretty well right now.

TODO: Planeswalkers, check that DFC cards still work, config options working as intended.

--- a/preshtildeath/config.ini
+++ b/preshtildeath/config.ini
@@ -2,8 +2,9 @@
 Move.Art = True
 
 [FULLART]
-Side.Pinlines = True
-Hollow.Mana = False
+Side.Pinlines = False
+Hollow.Mana = True
+Borderless = True
 
 [PIXEL]
 CRT.Filter = True
