Pixel Template and Fullart Template fix
Still needs tweaks, but hopefully works and has better error handling when dealing with the font change from MPlantin to Plantin Pro.

TODO: Update the readme and include the updated NDPMTG font that I'm using that has the fixed hybrid mana symbols.

--- a/preshtildeath/config.ini
+++ b/preshtildeath/config.ini
@@ -1,9 +1,10 @@
 [GENERAL]
 Move.Art = True
+Blank.Creature.Copy = False
+Hollow.Mana = True
 
 [FULLART]
 Side.Pinlines = False
-Hollow.Mana = True
 Borderless = True
 
 [PIXEL]
