Proxyshop 1.4 compatibility update
A pretty sweeping update with a few tweaks in logic, but largely working as intended. Invocation is a work in progress and does not meet my personal standards, it's mostly just a repurposing of old CardConjurer assets and testing that pipeline translating into proxyshop.

Be sure to grab the new .psd files as well.

--- a/preshtildeath/manifest.json
+++ b/preshtildeath/manifest.json
@@ -7,6 +7,22 @@
     "Pixel Modular": {
       "file": "pixel-template.psd",
       "id": "1FE4Jir29Xmehv3QnXpvSd9Ys_oUlG4QM"
+    },
+    "Fullart Weeb": {
+      "file": "fullart-modular-weeb.psd",
+      "id": "1uz-9k2ayL303Xdsy3PBIfd4GxI0gedBz"
+    },
+    "Equinox": {
+      "file": "equinox.psd",
+      "id": "1vqdVbbz-mc5t_dk9z-vKqIzrrNT5CGz0"
+    },
+    "Invocation": {
+      "file": "invocation.psd",
+      "id": "16d0ntPnzsGntdWcos0793BZYAJctoGLm"
+    },
+    "Universes Beyond": {
+      "file": "universes-beyond.psd",
+      "id": "1alxmmQCAerOT65wsx3WxeJbKQ7VScpFL"
     }
   }
 }
